--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "typings": "index.d.ts",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.js ",
-    "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.js "
+    "build": "cross-env NODE_ENV=production webpack --config config/webpack.config.js "
   },
   "author": "",
   "license": "ISC",
