--- a/package.json
+++ b/package.json
@@ -13,35 +13,33 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "autoprefixer": "^9.1.5",
     "babel-loader": "^8.2.2",
+    "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "babel-plugin-named-asset-import": "^0.3.7",
-    "react-refresh": "^0.8.3",
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.3",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "4.5.0",
+    "mini-css-extract-plugin": "0.11.3",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-loader": "^3.0.0",
     "postcss-normalize": "8.0.1",
     "postcss-safe-parser": "5.0.2",
     "react-dev-utils": "^11.0.2",
+    "react-refresh": "^0.8.3",
     "terser-webpack-plugin": "4.2.3",
-    "autoprefixer": "^9.1.5",
-    "mini-css-extract-plugin": "0.11.3",
     "typescript": "^4.1.5",
-    "copy-webpack-plugin": "^4.5.3",
     "url-loader": "4.1.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
-  },
-  "peerDependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "webpack-merge": "^4.2.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
