--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "autoprefixer": "^9.1.5",
     "babel-loader": "^8.2.2",
     "babel-plugin-named-asset-import": "^0.3.7",
