--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "lib/index.js",
   "module": "es/index.js",
-  "typings": "index.d.ts",
+  "typings": "types/index.d.ts",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.js ",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.config.js "
@@ -32,7 +32,9 @@
     "postcss-loader": "^3.0.0",
     "postcss-normalize": "8.0.1",
     "postcss-safe-parser": "5.0.2",
+    "react": "^17.0.1",
     "react-dev-utils": "^11.0.2",
+    "react-dom": "^17.0.1",
     "react-refresh": "^0.8.3",
     "terser-webpack-plugin": "4.2.3",
     "typescript": "^4.1.5",
@@ -40,8 +42,6 @@
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "webpack-merge": "^4.2.2"
   }
 }
