--- a/package.json
+++ b/package.json
@@ -6,42 +6,79 @@
   "module": "es/index.js",
   "typings": "types/index.d.ts",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.js ",
-    "build": "cross-env NODE_ENV=production webpack --config config/webpack.config.js "
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "7.12.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+    "@svgr/webpack": "5.5.0",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "autoprefixer": "^9.1.5",
-    "babel-loader": "^8.2.2",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
+    "bfj": "^7.0.2",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.3",
-    "cross-env": "^7.0.3",
-    "css-loader": "^5.0.2",
-    "file-loader": "^6.2.0",
+    "css-loader": "4.3.0",
+    "eslint": "^7.11.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^2.1.0",
+    "file-loader": "6.1.1",
+    "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
+    "identity-obj-proxy": "3.0.0",
     "mini-css-extract-plugin": "0.11.3",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
-    "postcss-loader": "^3.0.0",
+    "postcss-flexbugs-fixes": "4.2.1",
+    "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
+    "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
+    "prompts": "2.4.0",
     "react": "^17.0.1",
+    "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.2",
     "react-dom": "^17.0.1",
     "react-refresh": "^0.8.3",
+    "resolve": "1.18.1",
+    "resolve-url-loader": "^3.1.2",
+    "sass-loader": "^10.0.5",
+    "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
-    "typescript": "^4.1.5",
+    "ts-pnp": "1.2.0",
+    "typescript": "^4.1.2",
     "url-loader": "4.1.1",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
+    "web-vitals": "^1.0.1",
+    "webpack": "4.44.2",
+    "webpack-dev-server": "3.11.0",
+    "webpack-manifest-plugin": "2.2.0",
+    "workbox-webpack-plugin": "5.1.4"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
